# fredholm

./: Cargo.toml  README.md  plot.py
src/: histo.rs  main.rs  options.rs  sample.rs  state.rs  transition.rs
