# Copyright 2021 Davide Mancusi <davide.mancusi@cea.fr>
#
# This file is part of fredholm.
#
# fredholm is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# fredholm is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# fredholm.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "fredholm"
version = "0.1.0"
edition = "2018"
authors = ["Davide Mancusi <davide.mancusi@cea.fr>"]

[dependencies]
structopt = ">= 0.3.23"
rand = ">= 0.8.4"
rand_distr = ">= 0.4.2"
GSL = ">= 6.0.0"
